# wpsi_utils

./: .gitignore  Cargo.toml  README.md  bootstrap.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
config/: default.conf  example_config.toml  toolbox.toml
core/: Cargo.toml
core/src/: config.rs  lib.rs  registry.rs  runner.rs
docs/: README.md  module-writing.md
installers/: start.sh  startdev.sh  toolbox.desktop
man/: toolbox.1
modules/: README.md  _schema.module.toml
modules/example-app/: module.toml
modules/example-app/scripts/: configure.sh  install.sh  postcheck.sh  preflight.sh
modules/example-system-tweak/: module.toml
modules/example-system-tweak/scripts/: apply.sh
modules/games-poe/: README.md  module.toml
modules/games-poe/scripts/: launch-graph-tracker.sh  launch-zone-changer.sh  verify-prereqs.sh
modules/games/PoE/: README.md  module.toml
modules/games/PoE/tools/graph_tracker/: .gitignore  README.md  launch_poe_tracker.sh  pyproject.toml  run_tracker.sh
modules/games/PoE/tools/graph_tracker/poe_tracker/: __init__.py  api.py  app.py  cache.py  data.py  graph.py  ui.py
nix/: README.md  flake.nix
packaging/: README.md
packaging/aur/: .SRCINFO.placeholder  PKGBUILD.placeholder
packaging/deb/: control.placeholder
packaging/rpm/: toolbox.spec.placeholder
packaging/zypper/: toolbox.changes.placeholder
scripts/: README.md  common.sh  env.sh  example.sh
tui/: Cargo.toml
tui/src/: app_state.rs  main.rs  ui.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+6 files in other folders)
